--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,21 @@
     text-align: center;
     padding: 5px;
     font-size: 1.5rem;
+    margin-bottom: 10px;
 }
 
 .card-header{
     font-style: bold;
+}
+
+.btn{
+    width: 100%;
+    background-color: royalblue;
+    color: white;
+    margin: 5px;
+}
+
+.search-form{
+    width: 100%;
+    margin: 5px;
 }
