--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 *{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .navigation{
@@ -14,7 +14,8 @@
 .card-header{
     font-style: bold;
     margin: 5px;
-    background-color: rgb(235, 235, 223);
+    background-color: darkred;
+    color: white;
 }
 
 .btn{
@@ -30,7 +31,7 @@
 }
 
 .weather-img{
-    background-color: rgb(241, 211, 225);
+    background-color: rgb(253, 235, 132);
 }
 
 .weather-card{
